# writeups

./: .gitignore  README.md  template.md  writeup-template.md
18s1/o-week/crypto/basic/: README.md
18s1/o-week/crypto/happy_chinese_new_year/: README.md
18s1/o-week/crypto/jap/: README.md  コードトーク.txt
18s1/o-week/crypto/nsa/: README.md
18s1/o-week/crypto/ritual/: README.md
18s1/o-week/forensics/simple-stego/: README.md
18s1/o-week/misc/flash/: README.md
18s1/o-week/misc/phone/: README.md
18s1/o-week/misc/picklocking/: README.md
18s1/o-week/misc/recursion/: README.md
18s1/o-week/recon/abbreviation/: README.md
18s1/o-week/recon/founder/: README.md
18s1/o-week/reversing/gimme/: README.md  gimme.cgi  run.py
18s1/o-week/reversing/happy_leet/: README.md
18s1/o-week/web/animal_memes/: README.md  xss.css
18s1/suits-collab/: README.md
18s1/suits-collab/binary/whropper/: README.md  xinetd.conf
18s1/suits-collab/crypto/best_cipher/: README.md
18s1/suits-collab/crypto/pluses_and_minuses/: defrainbuck.py  frainbuck.c
18s1/suits-collab/crypto/s c r o n c h/: README.md
18s2/sem2internal/: README.md
2018/18s2/sem2internal/: README.md
2019/OWEEK/: steganocchio.md
2019/OWEEK/Basic Baby Crypto/: README.md  enc.py
2019/OWEEK/steganocchio/: steganocchio.md
2019/t2internal/misc/guess/guess/guess_server/: BUILD.bazel  main.go
2019/t2internal/misc/guess/guess/proto/: BUILD.bazel  guess.proto
OTW_Bandit/: BanditWriteup.out  BanditWriteup.tex  BanditWriteup.toc
wargames/OTW_Bandit/: BanditWriteup.aux  BanditWriteup.fdb_latexmk  BanditWriteup.fls
(+457 files in other folders)
