load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_binary(
  name = "guess_server",
  srcs = ["main.go"],
  deps = [
    "//guess/proto:guess_go_proto",
    "//guess/flag",
    "@org_golang_x_net//context:go_default_library",
    "@org_golang_google_grpc//:go_default_library",
    "@org_golang_google_grpc//reflection:go_default_library",
  ],
)
